# sm-odoo

./: .gitignore  README.md  commit_all.ps1  commit_untracked.ps1
backend/: README_OTP_SETUP.md  check_auth.py  check_db_connection.py  env.template  migrate_add_category.py  migrate_add_category_id_to_product.py  migrate_add_customer.py  migrate_add_min_stock_level.py  migrate_add_otp.py  migrate_add_reference.py  migrate_add_vendor_customer.py  migrate_make_category_nullable.py  migrate_product_category.py  pyproject.toml  seed.py  seed_stock.py  seed_warehouses.py  setup_postgres.py
backend/app/: main.py
backend/app/api/: auth.py  categories.py  customers.py  deps.py  operations.py  products.py  reports.py  vendors.py  warehouses.py
backend/app/core/: config.py  database.py  email.py  references.py  security.py
backend/app/models/: __init__.py  category.py  customer.py  inventory.py  otp.py  product.py  user.py  vendor.py
backend/app/schemas/: auth.py  category.py  customer.py  inventory.py  product.py  vendor.py  warehouse.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx  PrintTemplate.jsx  Sidebar.jsx
frontend/src/components/ui/: Button.jsx  (+7 more)
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useApiData.js
frontend/src/pages/: Customers.jsx  Dashboard.jsx  ForgotPassword.jsx  Landing.jsx  Login.jsx  MoveHistory.jsx  Operations.jsx  Products.jsx  Reports.jsx  Settings.jsx  Signup.jsx  Vendors.jsx
frontend/src/utils/: crudHelpers.js  errorHandler.js  printUtils.js
